welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: illegal character '\u00b2'
				²
                                ^